<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_new" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal"
            android:text="@string/titulo"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/input_tipo_cons2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onCheckBoxClicked"
                android:text="@string/tipo_consul"
                android:textColor="@drawable/edit_text" />

            <CheckBox
                android:id="@+id/input_tipo_medida2"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginStart="10dip"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onCheckBoxClicked"
                android:text="@string/tipo_medida"
                android:textColor="@drawable/edit_text" />

            <CheckBox
                android:id="@+id/input_tipo_fab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onCheckBoxClicked"
                android:text="@string/tipo_fabrica"
                android:textColor="@drawable/edit_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip">

            <EditText
                android:id="@+id/buscar_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/buscar"
                android:inputType="textPersonName" />

            <ImageButton
                android:id="@+id/btn_buscar"
                android:layout_width="15dip"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_end_color"
                android:onClick="buscar"
                app:srcCompat="@drawable/icon_search" />
            <ImageButton
                android:id="@+id/btn_limpiar"
                android:layout_width="15dip"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_end_color"
                android:onClick="limpiar"
                app:srcCompat="@drawable/icon_clear" />

        </LinearLayout>
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>